# anki-card-generator

./: .gcloudignore  .gitignore  README.md  README_EN.md  main.py  pyproject.toml  requirements.txt
AnkiCardDesign/: BackTemplate.html  FrontTemplate.html
ios_shortcut_only/: obsidian_to_anki_template.md  prompt.md  schema.json
ios_shortcut_only/AnkiCardDesignLite/: BackTemplate.html  FrontTemplate.html
